Argline and output file a name adjustment